refactor(refactoring code & Update README.md):